--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^5.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
